[Portfolio] - Fixing horizontal scroll issue on navbar

--- a/my-portfolio/src/Components/AboutMe/AboutMe.css
+++ b/my-portfolio/src/Components/AboutMe/AboutMe.css
@@ -1,11 +1,8 @@
 .aboutMeContainer {
-  margin-top: 5vh;
-  margin-left: 2vw;
-  margin-right: 2vw;
-  height: auto;
   display: grid;
   color: white;
-  gap: 2vh;
+  gap: 1em;
+  margin: 1rem;
 }
 
 .profileFacePicGridItem {
@@ -21,7 +18,6 @@
 .grid-item{
   grid-row: span 1;
   grid-column: span 1;
-  width: 100%;
   align-self: center;
   justify-self: center;
 }
