--- a/my-portfolio/src/Components/LandingPage/LandingPage.css
+++ b/my-portfolio/src/Components/LandingPage/LandingPage.css
@@ -2,11 +2,10 @@
   color: white;
   font-size: x-large;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(80vh, 1fr));
   justify-items: center;
   align-items: center;
-  margin: 1em;
 }
 
 .profile-pic {
